<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     >
    <item android:id="@+id/action_home"
        android:title="@string/home"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_herb"
        android:title="@string/herb_heading"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_shrub"
        android:title="@string/shrub_heading"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_climber"
        android:title="@string/climber_heading"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
