<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.example.rucha.homegardening.ClimberActivity">

    <include layout="@layout/content_toolbar"></include>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="355dp"
                    app:srcCompat="@drawable/bouganvalia" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bougainvillea"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_dark"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/desc_bougainvillea"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp" />

            </TableRow>

            <Space />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/desc_bougainvilleaTip1"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp"
                    android:textStyle="normal" />

            </TableRow>

            <Space />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/desc_bougainvilleaGerm"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp"
                    android:textStyle="normal"  />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/desc_bougainvilleaBenefits"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp"
                    android:textStyle="normal"  />

            </TableRow>

            <TableRow>
                <include layout="@layout/content_nextprev"/>

            </TableRow>
        </TableLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>